--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-postgres = "0.7.13"
 uuid = { version = "1.18.0", features = ["serde"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+serde_json = "1.0.142"
