--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
     labels:
       - "autoheal=true"
     restart: always
+    environment:
+      - PAYMENT_PROCESSOR_DEFAULT_URL=http://payment-processor-default:8080
+      - PAYMENT_PROCESSOR_FALLBACK_URL=http://payment-processor-fallback:8080
+      - PORT=3000
     deploy:
       resources:
         limits:
@@ -28,6 +32,10 @@ services:
       - payment-processor    
     expose: 
       - "3000"
+    environment:
+      - PAYMENT_PROCESSOR_DEFAULT_URL=http://payment-processor-default:8080
+      - PAYMENT_PROCESSOR_FALLBACK_URL=http://payment-processor-fallback:8080
+      - PORT=3000
 
   nginx:
     image: nginx:alpine
