--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,6 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1.89"
 axum = "0.8.4"
-bb8 = "0.8.3"
-bb8-postgres = "0.8.1"
 chrono = { version = "0.4.41", features = ["serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["full"] }
@@ -17,4 +15,8 @@ reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 serde_json = "1.0.142"
 hyper = "1.6.0"
 hyper-util = {version = "0.1.16", features =  ["tokio", "server-auto", "http1"]}
-tower = {version = "0.5.2", features = ["util"]}
+tower = {version = "0.5.2", features = ["util", "buffer", "limit"]}
+redis = "0.32.5"
+bb8 = "0.9.0"
+bb8-redis = "0.24.0"
+bb8-postgres = "0.9.0"
