fix issues, fix docker-compose

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 services:
   api01: &api
-    image: phalabadessa/rinha-rust:v1.1
+    image: phalabadessa/rinha-rust:v1.2
     hostname: api01
     networks:
       - backend
@@ -20,12 +20,15 @@ services:
       - PAYMENT_PROCESSOR_FALLBACK_URL=http://payment-processor-fallback:8080
       - PORT=3000
       - MEMORY_DATABASE_URL=redis://redis:6379
-      - NUM_WORKERS=20
+      - NUM_WORKERS=40
+      - PAYMENT_PROCESSOR_MAX_RESPONSE_TIME=4000
+      - MEMORY_DATABASE_COLLECTION_NAME=payment_collection
+      - REDIS_QUEUE_NAME=payment_processor_queue
     deploy:
       resources:
         limits:
           cpus: "0.4"
-          memory: "70MB"
+          memory: "60MB"
 
   api02:
     <<: *api
@@ -41,11 +44,14 @@ services:
       - PORT=3000
       - MEMORY_DATABASE_URL=redis://redis:6379
       - NUM_WORKERS=0
+      - PAYMENT_PROCESSOR_MAX_RESPONSE_TIME=4000
+      - MEMORY_DATABASE_COLLECTION_NAME=payment_collection
+      - REDIS_QUEUE_NAME=payment_processor_queue
     deploy:
       resources:
         limits:
           cpus: "0.2"
-          memory: "30MB"
+          memory: "20MB"
 
 
   redis:
@@ -59,7 +65,7 @@ services:
       resources:
         limits:
           cpus: "0.3"
-          memory: "70MB"
+          memory: "100MB"
 
   nginx:
     image: nginx:alpine
@@ -72,7 +78,6 @@ services:
       - "9999:9999"
     networks:
       - backend
-      - payment-processor
     environment:
       - AUTOHEAL_INTERVAL=60  
       - AUTOHEAL_START_PERIOD=300 
@@ -81,7 +86,7 @@ services:
       resources:
         limits:
           cpus: "0.2"
-          memory: "30MB"
+          memory: "20MB"
 
   db:
     image: postgres:latest
