--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -24,6 +24,7 @@ services:
       - PAYMENT_PROCESSOR_MAX_RESPONSE_TIME=120
       - MEMORY_DATABASE_COLLECTION_NAME=payment_collection
       - REDIS_QUEUE_NAME=payment_processor_queue
+      - INSTANCE=MASTER
     deploy:
       resources:
         limits:
