--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -25,6 +25,7 @@ services:
       - MEMORY_DATABASE_COLLECTION_NAME=payment_collection
       - REDIS_QUEUE_NAME=payment_processor_queue
       - INSTANCE=MASTER
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/rinha_2025_db
     deploy:
       resources:
         limits:
@@ -48,6 +49,7 @@ services:
       - PAYMENT_PROCESSOR_MAX_RESPONSE_TIME=120
       - MEMORY_DATABASE_COLLECTION_NAME=payment_collection
       - REDIS_QUEUE_NAME=payment_processor_queue
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/rinha_2025_db
     deploy:
       resources:
         limits:
